--- a/react-nasa-apod/src/components/Viewer/Viewer.scss
+++ b/react-nasa-apod/src/components/Viewer/Viewer.scss
@@ -16,4 +16,10 @@
       box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
     }
   }
+  iframe {
+    background: black;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    width: calc(100% - 10rem);
+    height: calc(100% - 10rem);
+  }
 }
